[gd_scene load_steps=10 format=3 uid="uid://dmnh3uxk6hlaj"]

[ext_resource type="Script" path="res://UI/MainMenu/MainMenu.gd" id="1_2q6v6"]
[ext_resource type="PackedScene" uid="uid://sryd043ysm2c" path="res://UI/GameMenu/GameMenu.tscn" id="2_1v01p"]
[ext_resource type="Texture2D" uid="uid://cesgnjnyuwhbr" path="res://Nodes/Gates/And/nandIcon.png" id="2_mu6m2"]
[ext_resource type="Theme" uid="uid://80hoaimwssja" path="res://UI/Themes/RightCornerButton.tres" id="3_5axtw"]
[ext_resource type="Theme" uid="uid://b7hm4jkruajuu" path="res://UI/Themes/LeftCornerButton.tres" id="3_iedrr"]
[ext_resource type="Texture2D" uid="uid://c50uu6wy88ik2" path="res://UI/Icons/back.svg" id="4_hsfuk"]
[ext_resource type="Texture2D" uid="uid://6jg3dywoqtid" path="res://UI/Icons/check.svg" id="5_cjfp2"]
[ext_resource type="AudioStream" uid="uid://eomw8em1sogd" path="res://Sounds/button.mp3" id="8_udmmx"]
[ext_resource type="PackedScene" uid="uid://17ckr38omtt0" path="res://UI/MainMenu/VolumeSlider.tscn" id="9_rg8mx"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 720.0
offset_bottom = 1280.0
script = ExtResource("1_2q6v6")

[node name="MainMenu" type="Panel" parent="."]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 721.0
offset_bottom = 1281.0

[node name="Title" type="Control" parent="MainMenu"]
anchors_preset = 0
offset_right = 724.0
offset_bottom = 624.0

[node name="RichTextLabel" type="RichTextLabel" parent="MainMenu/Title"]
layout_mode = 2
offset_left = -1.0
offset_top = 67.0
offset_right = 721.0
offset_bottom = 267.0
theme_override_font_sizes/normal_font_size = 66
bbcode_enabled = true
text = "[center]Truth[/center]
[center]Tables[/center]"

[node name="TextureRect" type="TextureRect" parent="MainMenu/Title"]
layout_mode = 0
offset_left = 220.0
offset_top = 301.0
offset_right = 324.0
offset_bottom = 387.0
scale = Vector2(2.89, 2.89)
texture = ExtResource("2_mu6m2")
stretch_mode = 2

[node name="Menu" type="VBoxContainer" parent="MainMenu"]
layout_mode = 0
offset_left = 268.0
offset_top = 681.0
offset_right = 464.0
offset_bottom = 1119.0
theme_override_constants/separation = 65
alignment = 1

[node name="PlayButton" type="Button" parent="MainMenu/Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Play"

[node name="OptionButton" type="Button" parent="MainMenu/Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Options"

[node name="QuitButton" type="Button" parent="MainMenu/Menu"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Quit"

[node name="OptionMenu" type="Panel" parent="MainMenu"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 718.0
offset_bottom = 1277.0

[node name="Label" type="Label" parent="MainMenu/OptionMenu"]
layout_mode = 0
offset_left = 225.0
offset_top = 105.0
offset_right = 494.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 60
text = "Options"
horizontal_alignment = 1

[node name="MasterSlider" parent="MainMenu/OptionMenu" instance=ExtResource("9_rg8mx")]
layout_mode = 0
offset_left = 174.0
offset_top = 332.0
offset_right = 574.0
offset_bottom = 372.0
label = "Master Volume"
busName = "Master"

[node name="MusicSlider" parent="MainMenu/OptionMenu" instance=ExtResource("9_rg8mx")]
layout_mode = 0
offset_left = 170.0
offset_top = 521.0
offset_right = 570.0
offset_bottom = 561.0
label = "Music Volume"
busName = "Music"

[node name="SFXSlider" parent="MainMenu/OptionMenu" instance=ExtResource("9_rg8mx")]
layout_mode = 0
offset_left = 169.0
offset_top = 719.0
offset_right = 569.0
offset_bottom = 759.0
label = "Sound Effect Volume"
busName = "SFX"

[node name="QuitOption" type="Button" parent="MainMenu/OptionMenu"]
layout_mode = 0
offset_left = 267.0
offset_top = 1021.0
offset_right = 465.0
offset_bottom = 1116.0
text = "Quit"

[node name="LevelsScroll" type="ScrollContainer" parent="MainMenu"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.058
anchor_top = 0.018
anchor_right = 0.058
anchor_bottom = 0.018
offset_left = 8.24
offset_top = 576.87
offset_right = 608.24
offset_bottom = 1176.87

[node name="Levels" type="VBoxContainer" parent="MainMenu/LevelsScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 100

[node name="DescriptionPanel" type="Panel" parent="MainMenu"]
visible = false
layout_mode = 0
offset_left = 109.0
offset_top = 63.0
offset_right = 609.0
offset_bottom = 563.0

[node name="Label" type="Label" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = 150.0
offset_top = 16.0
offset_right = 344.0
offset_bottom = 62.0

[node name="DescriptionText" type="RichTextLabel" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = 12.0
offset_top = 109.0
offset_right = 210.0
offset_bottom = 321.0
scale = Vector2(1.25, 1.25)
scroll_active = false

[node name="table" type="TextureRect" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = 283.0
offset_top = 96.0
offset_right = 484.0
offset_bottom = 366.0

[node name="ScoreText" type="RichTextLabel" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = 83.0
offset_top = 432.0
offset_right = 404.0
offset_bottom = 516.0
scroll_active = false

[node name="StartButton" type="Button" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = 490.0
offset_top = 1096.0
offset_right = 610.0
offset_bottom = 1216.0
theme = ExtResource("3_5axtw")

[node name="TextureRect2" type="TextureRect" parent="MainMenu/DescriptionPanel/StartButton"]
layout_mode = 0
offset_left = 17.0001
offset_top = 20.0001
offset_right = 43.0001
offset_bottom = 44.0001
scale = Vector2(3.6, 3.6)
texture = ExtResource("5_cjfp2")
stretch_mode = 2

[node name="Button" type="Button" parent="MainMenu/DescriptionPanel"]
layout_mode = 0
offset_left = -110.0
offset_top = 1096.0
offset_right = 10.0
offset_bottom = 1216.0
theme = ExtResource("3_iedrr")
icon_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainMenu/DescriptionPanel/Button"]
layout_mode = 0
offset_left = 11.0
offset_top = 20.0
offset_right = 37.0
offset_bottom = 44.0
scale = Vector2(3.6, 3.6)
texture = ExtResource("4_hsfuk")
stretch_mode = 2

[node name="GameMenu" parent="." instance=ExtResource("2_1v01p")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_udmmx")
bus = &"SFX"

[node name="Music" type="AudioStreamPlayer2D" parent="."]
volume_db = -5.136
bus = &"Music"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="MainMenu/Menu/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MainMenu/Menu/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="pressed" from="MainMenu/Menu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionMenu/QuitOption" to="." method="_on_quit_option_pressed"]
[connection signal="pressed" from="MainMenu/DescriptionPanel/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/DescriptionPanel/Button" to="." method="_on_button_pressed"]
